--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,7 +1,12 @@
 all:
   hosts:
     vm1:
-      ansible_host: "{{ secrets.vm1_host }}"
-      ansible_user: "{{ secrets.vm1_user }}"
-      ansible_ssh_private_key_file: "{{ secrets.vm1_private_key }}"
-      ansible_ssh_port: "{{ secrets.vm1_port }}"
+      ansible_host: "{{ secrets.vm1.host }}"
+      ansible_user: "{{ secrets.vm1.user }}"
+      ansible_ssh_private_key_file: "{{ secrets.vm1.private_key }}"
+      ansible_ssh_port: "{{ secrets.vm1.port }}"
+    vm2:
+      ansible_host: "{{ secrets.vm2.host }}"
+      ansible_user: "{{ secrets.vm2.user }}"
+      ansible_ssh_private_key_file: "{{ secrets.vm2.private_key }}"
+      ansible_ssh_port: "{{ secrets.vm2.port }}"
