--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -2,12 +2,51 @@
   apt:
     update_cache: yes
     
-- name: install docker
-  apt:
-    name: docker.io
-    state: present
+# - name: install docker
+#   apt:
+#     name: docker.io
+#     state: present
 
-- name: install docker-compose
+# - name: install docker-compose
+#   apt:
+#     name: docker-compose
+#     state: present
+
+- name: Install required packages 
   apt:
-    name: docker-compose
+    name: "{{ item }}"
     state: present
+  with_items:
+    - curl
+    - ca-certificates
+
+- name: Create keyrings directory
+  file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+
+- name: Download Docker's official GPG key
+  get_url:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    dest: /etc/apt/keyrings/docker.asc
+    mode: '0644'
+
+- name: Add Docker repository
+  shell: |
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+- name: Update APT package index after adding Docker repository
+  apt:
+    update_cache: yes
+    
+- name: Install Docker and Docker Compose
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - docker-ce
+    - docker-ce-cli
+    - containerd.io
+    - docker-buildx-plugin
+    - docker-compose-plugin
