--- a/roles/orchestrate/files/docker-compose.yaml
+++ b/roles/orchestrate/files/docker-compose.yaml
@@ -1,22 +1,39 @@
 version: '3.9'
 
 services:
+  mariadb:
+    container_name: mariadb 
+    image: db:42
+    ports:
+      - "3306:3306"
+    env_file:
+      - .env
+    volumes:
+      - db_volume:/var/lib/mysql
+    restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$MYSQL_ROOT_PASSWORD"]
+      timeout: 20s
+      retries: 10
+    networks:
+      - cloud_1_network
+
   wordpress:
-    container_name: wordpress_container
+    container_name: wordpress
     image: wp:42
     env_file:
       - .env
-  
     ports:
       - "9000:9000"
     volumes:
       - wp_volume:/var/www/html
     depends_on:
-      mysql:
+      mariadb:
         condition: service_healthy
     restart: always
     networks:
       - cloud_1_network
+
   nginx:
       image: nginx:42
       container_name: nginx
@@ -30,28 +47,23 @@ services:
         - cloud_1_network
       restart: always
 
-  mysql:
-    container_name: mysql
-    image: db:42
-    ports:
-      - "3306:3306"
-    env_file:
-      - .env
-    volumes:
-      - db_volume:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
-    restart: always
-    networks:
-      - cloud_1_network
-
 volumes:
   db_volume:
+    name: db_volume
+    driver: local
+    driver_opts:
+      device:  "../data/db"
+      type: none
+      o: bind
+
   wp_volume:
+    name: wp_volume
+    driver: local
+    driver_opts:
+      device:  "../data/wp"
+      type: none
+      o: bind
 
 networks:
   cloud_1_network:
     driver: bridge
-    attachable: true
